(rule
 (targets seq.ml seq.mli)
 (deps seq_redef.ml seq_redef.mli)
 (enabled_if (< %{ocaml_version} 4.07))
 (action
  (progn
   (copy seq_redef.ml.template seq.ml)
   (copy seq_redef.mli.template seq.mli))))

(library
 (wrapped false)
 ;(modules seq)
 ;(enabled_if (< %{ocaml_version} 4.07))
 (public_name seq))
